--- a/index.html
+++ b/index.html
@@ -10,11 +10,29 @@
     <section id="landing-page">
         <nav>
             <figure>
-                <img src="" alt="">
+                <img id="as-logo" src="./assets/ASlogo.png" alt="">
             </figure>
             <ul class="nav__link--list">
                 <li class="nav__link">
-                    <a href=""></a>
+                    <a href="#" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">About</a>
+                </li>
+                <li class="nav__link">
+                    <a href="#" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">Projects</a>
+                </li>
+                <li class="nav__link">
+                    <a href="#" class="
+                    nav__link--anchor
+                    link__hover-effect
+                    link__hover-effect--black
+                    ">Contact</a>
                 </li>
             </ul>
         </nav>
