--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
         <header class="header">
             <div class="header__content">
-                <h1 class="title">Hey</h1>
-                <h1 class="title green">I'm Alan</h1>
+                <h1 class="title">Hi</h1>
+                <h1 class="title green">I'm Alan.</h1>
                 <p class="header__para">
                     I'm a <b class="green">Frontend Software Engineer</b>, with a passion for building web applications that provide a fantastic user experience.
                     <br>
@@ -73,6 +73,42 @@
         <a href="#projects" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">
+                    Here are some of my <span class="green">projects</span>
+                </h1>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Car Sales Project
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CSS, JavaScript
+                                </h4>
+                                <div class="project__description--para">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dicta tempora placeat omnis necessitatibus aut? Distinctio, nostrum ullam? Odio doloremque dolorem soluta officia reprehenderit quidem sunt.
+                                </div>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fab fa-github"></i>
+                                    </a>
+                                    <a href="#" class="project__description--link">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 </body>
 </html>
