--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
     </section>
     <footer>
         <div class="container">
+            <div class="row footer__row">
+
+            
             <figure>
-                <img src="./assets/ASlogo.png" alt="">
+                <img class="footer__logo--img" src="./assets/ASlogo.png" alt="">
             </figure>
             <div class="footer__social--list">
                 <a href="#" class="
@@ -142,6 +145,7 @@
                 </a>
             </div>
             <div class="footer__copyright">Copyright &copy 2024 Alan Stevens</div>
+            </div>
         </div>
     </footer>
 </body>
