added first bits of animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alan Stevens</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a8a120cec2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="landing-page">
@@ -73,6 +73,9 @@
         <a href="#projects" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
+        <div class="modal">
+            
+        </div>
     </section>
     <section id="projects">
         <div class="container">
@@ -121,26 +124,26 @@
             <div class="footer__social--list">
                 <a href="#" class="
                     footer__social--link
-                    liver__hover-effect
-                    liver__hover-effect--white">
+                    link__hover-effect
+                    link__hover-effect--white">
                     Github
                 </a>
                 <a href="#" class="
                     footer__social--link
-                    liver__hover-effect
-                    liver__hover-effect--white">
+                    link__hover-effect
+                    link__hover-effect--white">
                     LinkedIn
                 </a>
                 <a href="#" class="
                     footer__social--link
-                    liver__hover-effect
-                    liver__hover-effect--white">
+                    link__hover-effect
+                    link__hover-effect--white">
                     Contact
                 </a>
                 <a href="#" class="
                     footer__social--link
-                    liver__hover-effect
-                    liver__hover-effect--white">
+                    link__hover-effect
+                    link__hover-effect--white">
                     Resume
                 </a>
             </div>
