--- a/index.html
+++ b/index.html
@@ -74,7 +74,36 @@
             <div class="scroll__icon click"></div>
         </a>
         <div class="modal">
-            
+            <div class="modal__half modal__about">
+                <h3 class="modal__title modal__title--about">A little about me.</h3>
+                <h4 class="modal__sub-title modal__sub-title--about">
+                    Frontend Software Engineer
+                </h4>
+                <p class="modal__para">
+                    I am a <b class="green">frontend software engineer </b>with a <b class="green">customer service background </b>which translates into user-friendly web experiences.
+                    <br>
+                    I currently work in a problem-solving environment and want to continue learning from <b class="green">talented </b>and <b class="green">experienced</b> software engineers on a daily basis.
+                </p>
+                <div class="modal__languages">
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/html5.png" alt="">
+                        <span class="language__name">HTML</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/css.png" alt="">
+                        <span class="language__name">CSS</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/JavaScript-logo.png" alt="">
+                        <span class="language__name">JavaScript</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="./assets/react.png" alt="">
+                        <span class="language__name">REACT</span>
+                    </figure>
+                </div>
+            </div>
+            <div class="modal__half modal__contact">Let's talk!</div>
         </div>
     </section>
     <section id="projects">
