--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
                     </div>
                     <button id="contact__submit" class="form__submit">Give me a shout!</button>
                 </form>
+                <div class="modal__overlay modal__overlay--loading">
+                    <i class="fas fa-spinner"></i>
+                </div>
             </div>
         </div>
     </section>
