--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Alan Stevens</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a8a120cec2.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("F2RTnso70QpihR1dI");
+   })();
+</script>
 </head>
 <body>
     <section id="landing-page">
@@ -106,7 +115,7 @@
             <div class="modal__half modal__contact">
                 <h3 class="modal__title modal__title--contact">Let's Talk!</h3>
                 <h4 class="modal__sub-title modal__sub-title--contact">I am currently open to new opportunities.</h3>
-                <form id="contact__form" action="">
+                <form id="contact__form" onsubmit="contact(event)">
                     <div class="form__item">
                         <label class="form__item--label">Name</label>
                         <input class="input" name="user_name" type="text" required></input>
