modal interactivity complete

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     link__hover-effect--black
                     ">Projects</a>
                 </li>
-                <li class="nav__link">
+                <li class="nav__link" onclick="toggleModal()">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
@@ -61,7 +61,7 @@
                 <p class="header__para">
                     I'm a <b class="green">Frontend Software Engineer</b>, with a passion for building web applications that provide a fantastic user experience.
                     <br>
-                    Learn a little more <b class="green">about me</b>.
+                    Learn a little more <b class="green click" onclick="toggleModal()">about me</b>.
                 </p>
                 <div class="social__list">
                     <a href="" class="social__link click">
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </header>
-        <button class="mail__btn click">
+        <button class="mail__btn click" onclick="toggleModal()">
             <i class="fas fa-envelope"></i>
         </button>
         <a href="#projects" class="scroll">
@@ -113,6 +113,7 @@
                 </div>
             </div>
             <div class="modal__half modal__contact">
+                <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
                 <h3 class="modal__title modal__title--contact">Let's Talk!</h3>
                 <h4 class="modal__sub-title modal__sub-title--contact">I am currently open to new opportunities.</h3>
                 <form id="contact__form" onsubmit="contact(event)">
@@ -137,7 +138,6 @@
                     Thanks for the message! I am looking forward to speaking with you soon!
                 </div>
             </div>
-            <i class="fas fa-times modal__exit click"></i>
         </div>
     </section>
     <section id="projects">
