--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img id="as-logo" src="./assets/ASlogo.png" alt="">
             </figure>
             <ul class="nav__link--list">
-                <li class="nav__link">
+                <li class="nav__link" onclick="toggleModal()">
                     <a href="#" class="
                     nav__link--anchor
                     link__hover-effect
@@ -31,7 +31,7 @@
                     ">About</a>
                 </li>
                 <li class="nav__link">
-                    <a href="#" class="
+                    <a href="#projects" class="
                     nav__link--anchor
                     link__hover-effect
                     link__hover-effect--black
@@ -76,9 +76,11 @@
                 </div>
             </div>
         </header>
+        <a href="#">
         <button class="mail__btn click" onclick="toggleModal()">
             <i class="fas fa-envelope"></i>
         </button>
+        </a>
         <a href="#projects" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
@@ -194,25 +196,25 @@
                 <img class="footer__logo--img" src="./assets/ASlogo.png" alt="">
             </figure>
             <div class="footer__social--list">
-                <a href="#" class="
+                <a href="#" target="_blank" class="
                     footer__social--link
                     link__hover-effect
                     link__hover-effect--white">
                     Github
                 </a>
-                <a href="#" class="
+                <a href="#" target="_blank" class="
                     footer__social--link
                     link__hover-effect
                     link__hover-effect--white">
                     LinkedIn
                 </a>
-                <a href="#" class="
+                <a href="#" onclick="toggleModal()" class="
                     footer__social--link
                     link__hover-effect
                     link__hover-effect--white">
                     Contact
                 </a>
-                <a href="#" class="
+                <a href="./assets/David Bragg Resume.pdf" target="_blank" class="
                     footer__social--link
                     link__hover-effect
                     link__hover-effect--white">
